--- a/5-structure-4.ipynb
+++ b/5-structure-4.ipynb
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "s ='abcdefgh'\n",
+    "s ='abcdefghkk'\n",
     "for c in s:\n",
     "   print (c)\n",
     "    "
