--- a/9-oo-3.ipynb
+++ b/9-oo-3.ipynb
@@ -300,18 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class animal:\n",
     "    kind =''\n",
-    "    def__int__(self, name):\n",
-    "        self.name =name\n",
+    "    def __int__(self, name):\n",
+    "        self.name = name\n",
     "        \n",
     "    def voice(self):\n",
     "        return '...'\n",
-    "    "
+    "    \n",
+    "class fruits:\n",
+    "    kind =''\n",
+    "    def __int__(self,name):\n",
+    "        self.name = orange\n",
+    "        \n",
+    "    def color(self):\n",
+    "        return 'orange'\n",
+    "        \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -325,30 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Animal' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m-------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-6b73501c3df3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mDog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAnimal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'canidae'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mvoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Animal' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Dog(Animal):\n",
+    "class Dog :\n",
     "    \n",
     "    kind = 'canidae'\n",
     "    \n",
     "    def voice(self):\n",
     "        return 'woof-woof'\n",
     "    \n",
-    "    bark= voice\n",
+    "    bark = voice\n",
     "    "
    ]
   },
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -369,14 +367,25 @@
      "evalue": "name 'Animal' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m-------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-d94d4581a0a2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mCat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAnimal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'felidaoo'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mvoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;34m'woof-woof'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Animal' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-4fcd327ab5d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mCat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAnimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mkind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'felidae'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Animal' is not defined"
      ]
     }
    ],
    "source": [
+    "\n",
+    "class animal:\n",
+    "    kind =''\n",
+    "    def __int__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def voice(self):\n",
+    "        return '...'\n",
+    "\n",
+    "\n",
+    "\n",
     "class Cat(Animal):\n",
     "    kind = 'felidae'\n",
     "    \n",
